# mamede_pong

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/engine/: ball.h  collisions.h  configs.h  controller.h  engine.h  game.h  math.h  paddle.h
src/: ball.c  collisions.c  controller.c  engine.c  game.c  main.c  math.c  paddle.c
